--- a/VuforiaSampleSwift/Main.storyboard
+++ b/VuforiaSampleSwift/Main.storyboard
@@ -98,6 +98,40 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AI8-gQ-uYz">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jj3-T1-QoT">
+                                        <rect key="frame" x="47" y="175" width="280" height="317"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Pop Up" translatesAutoresizingMaskIntoConstraints="NO" id="IuU-jB-5uA">
+                                                <rect key="frame" x="0.0" y="-13.5" width="280" height="344"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="344" id="Xub-TT-Rqa"/>
+                                                    <constraint firstAttribute="width" constant="280" id="asl-ef-shX"/>
+                                                </constraints>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsK-pj-bGX">
+                                                <rect key="frame" x="79" y="264" width="123" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="81Z-7T-fus"/>
+                                                </constraints>
+                                                <state key="normal" image="Close button"/>
+                                                <connections>
+                                                    <action selector="closePressed" destination="j9V-LF-o0c" eventType="touchUpInside" id="eZY-jh-sCv"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <accessibility key="accessibilityConfiguration">
+                                            <accessibilityTraits key="traits" searchField="YES"/>
+                                        </accessibility>
+                                        <constraints>
+                                            <constraint firstItem="IuU-jB-5uA" firstAttribute="top" secondItem="jj3-T1-QoT" secondAttribute="top" constant="-14" id="6qS-tQ-08F"/>
+                                            <constraint firstItem="IuU-jB-5uA" firstAttribute="leading" secondItem="jj3-T1-QoT" secondAttribute="leading" id="MAF-ri-H6b"/>
+                                            <constraint firstAttribute="trailing" secondItem="xsK-pj-bGX" secondAttribute="trailing" constant="78" id="VjV-RR-prr"/>
+                                            <constraint firstItem="IuU-jB-5uA" firstAttribute="centerX" secondItem="xsK-pj-bGX" secondAttribute="centerX" id="aNJ-rf-i1q"/>
+                                            <constraint firstItem="IuU-jB-5uA" firstAttribute="centerY" secondItem="jj3-T1-QoT" secondAttribute="centerY" id="bKl-jC-2oY"/>
+                                            <constraint firstItem="xsK-pj-bGX" firstAttribute="leading" secondItem="jj3-T1-QoT" secondAttribute="leading" constant="79" id="l2z-aH-uup"/>
+                                            <constraint firstAttribute="bottom" secondItem="xsK-pj-bGX" secondAttribute="bottom" constant="23" id="yh1-Wj-DLQ"/>
+                                        </constraints>
+                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rV7-Jb-H3W">
                                         <rect key="frame" x="80" y="546" width="85" height="42"/>
                                         <constraints>
@@ -141,9 +175,11 @@
                                     <constraint firstItem="rV7-Jb-H3W" firstAttribute="leading" secondItem="AI8-gQ-uYz" secondAttribute="leading" constant="80" id="KVr-Hd-EEe"/>
                                     <constraint firstItem="Xqu-xT-MiE" firstAttribute="top" secondItem="eri-5K-IO2" secondAttribute="bottom" constant="27" id="KtK-0p-RNL"/>
                                     <constraint firstAttribute="bottom" secondItem="Xqu-xT-MiE" secondAttribute="bottom" constant="20" id="d5M-KI-sTl"/>
+                                    <constraint firstItem="jj3-T1-QoT" firstAttribute="centerX" secondItem="AI8-gQ-uYz" secondAttribute="centerX" id="ht5-ad-spL"/>
                                     <constraint firstItem="L40-ev-AK4" firstAttribute="leading" secondItem="AI8-gQ-uYz" secondAttribute="leading" constant="76" id="k8X-Yq-6fX"/>
                                     <constraint firstItem="L40-ev-AK4" firstAttribute="top" secondItem="rV7-Jb-H3W" secondAttribute="bottom" constant="29" id="k8p-Ww-0gc"/>
                                     <constraint firstItem="rV7-Jb-H3W" firstAttribute="top" secondItem="eri-5K-IO2" secondAttribute="top" id="kIs-g7-3Rl"/>
+                                    <constraint firstItem="jj3-T1-QoT" firstAttribute="centerY" secondItem="AI8-gQ-uYz" secondAttribute="centerY" id="qPf-y7-INB"/>
                                     <constraint firstItem="L40-ev-AK4" firstAttribute="top" secondItem="Xqu-xT-MiE" secondAttribute="top" id="v87-gw-nwq"/>
                                 </constraints>
                             </view>
@@ -158,6 +194,7 @@
                     <connections>
                         <outlet property="endSessionButton" destination="Xqu-xT-MiE" id="cMo-su-eS1"/>
                         <outlet property="endSetButton" destination="rV7-Jb-H3W" id="HCb-j2-8kJ"/>
+                        <outlet property="popupView" destination="jj3-T1-QoT" id="qZD-dw-BMx"/>
                         <outlet property="startSessionButton" destination="L40-ev-AK4" id="EPb-yj-4ME"/>
                         <outlet property="startSetButton" destination="eri-5K-IO2" id="EqC-6s-4xc"/>
                     </connections>
@@ -177,48 +214,6 @@
                     <view key="view" contentMode="scaleToFill" id="hvw-Va-uka">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jj3-T1-QoT">
-                                <rect key="frame" x="47" y="175" width="280" height="317"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IuU-jB-5uA">
-                                        <rect key="frame" x="0.0" y="-13.5" width="280" height="344"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="344" id="Xub-TT-Rqa"/>
-                                            <constraint firstAttribute="width" constant="280" id="asl-ef-shX"/>
-                                        </constraints>
-                                    </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsK-pj-bGX">
-                                        <rect key="frame" x="79" y="264" width="123" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="81Z-7T-fus"/>
-                                        </constraints>
-                                        <state key="normal" image="Close button"/>
-                                        <connections>
-                                            <action selector="closePopup:" destination="zO1-lk-azl" eventType="touchUpInside" id="O1y-qU-NE9"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" searchField="YES"/>
-                                </accessibility>
-                                <constraints>
-                                    <constraint firstItem="IuU-jB-5uA" firstAttribute="top" secondItem="jj3-T1-QoT" secondAttribute="top" constant="-14" id="6qS-tQ-08F"/>
-                                    <constraint firstItem="IuU-jB-5uA" firstAttribute="leading" secondItem="jj3-T1-QoT" secondAttribute="leading" id="MAF-ri-H6b"/>
-                                    <constraint firstAttribute="trailing" secondItem="xsK-pj-bGX" secondAttribute="trailing" constant="78" id="VjV-RR-prr"/>
-                                    <constraint firstItem="IuU-jB-5uA" firstAttribute="centerX" secondItem="xsK-pj-bGX" secondAttribute="centerX" id="aNJ-rf-i1q"/>
-                                    <constraint firstItem="IuU-jB-5uA" firstAttribute="centerY" secondItem="jj3-T1-QoT" secondAttribute="centerY" id="bKl-jC-2oY"/>
-                                    <constraint firstItem="xsK-pj-bGX" firstAttribute="leading" secondItem="jj3-T1-QoT" secondAttribute="leading" constant="79" id="l2z-aH-uup"/>
-                                    <constraint firstAttribute="bottom" secondItem="xsK-pj-bGX" secondAttribute="bottom" constant="23" id="yh1-Wj-DLQ"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="jj3-T1-QoT" firstAttribute="top" secondItem="OQC-jK-t8F" secondAttribute="bottom" constant="155" id="1qJ-nG-DT0"/>
-                            <constraint firstItem="jj3-T1-QoT" firstAttribute="leading" secondItem="hvw-Va-uka" secondAttribute="leadingMargin" constant="31" id="1v1-US-Bv2"/>
-                            <constraint firstItem="jj3-T1-QoT" firstAttribute="centerY" secondItem="hvw-Va-uka" secondAttribute="centerY" id="8V2-YE-KjO"/>
-                            <constraint firstItem="jj3-T1-QoT" firstAttribute="centerX" secondItem="hvw-Va-uka" secondAttribute="centerX" id="c6G-XI-zvm"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="popupView" destination="IuU-jB-5uA" id="cUU-X3-MO1"/>
@@ -556,6 +551,7 @@
         <image name="Group 2" width="3320" height="1730"/>
         <image name="Group 3" width="2970" height="2050"/>
         <image name="Past_Dark" width="1250" height="450"/>
+        <image name="Pop Up" width="2670" height="3460"/>
         <image name="Squat Background" width="3750" height="6670"/>
         <image name="TRAIN NOW" width="2870" height="440"/>
         <image name="Today_Bright" width="1260" height="450"/>
