--- a/VuforiaSampleSwift/Main.storyboard
+++ b/VuforiaSampleSwift/Main.storyboard
@@ -555,6 +555,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="lf7-E8-Ve4"/>
-        <segue reference="DiO-tt-O4h"/>
+        <segue reference="Bi0-rQ-yf6"/>
     </inferredMetricsTieBreakers>
 </document>
